--- a/notebooks/1.mulal_qc.ipynb
+++ b/notebooks/1.mulal_qc.ipynb
@@ -8,6 +8,7 @@
    "outputs": [],
    "source": [
     "import os\n",
+    "import sys\n",
     "from multiprocessing import Process, Pool\n",
     "\n",
     "import numpy as np\n",
@@ -16,7 +17,8 @@
     "from Bio import SeqIO\n",
     "import tqdm\n",
     "\n",
-    "from src.utils import release_mutations_from_two_seqs"
+    "sys.path.append('../scripts/')\n",
+    "from utils import release_mutations_from_two_seqs"
    ]
   },
   {
