--- a/notebooks/11.plot_time_mutspec.ipynb
+++ b/notebooks/11.plot_time_mutspec.ipynb
@@ -17,7 +17,7 @@
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
-    "import statsmodels.api as sm\n"
+    "import statsmodels.api as sm"
    ]
   },
   {
@@ -28,7 +28,7 @@
    "source": [
     "path_all = \"https://raw.githubusercontent.com/VoronkaAlexandr/Sars_Cov_2_MutSpec/main/Sars_Cov_2/new_data/data_obtained/MutChange_12spec_normed_one.csv\"\n",
     "path_syn = \"https://raw.githubusercontent.com/VoronkaAlexandr/Sars_Cov_2_MutSpec/main/Sars_Cov_2/new_data/data_obtained/MutChange_12spec_SYN_normed_byone.csv\"\n",
-    "path_ff = \"https://raw.githubusercontent.com/VoronkaAlexandr/Sars_Cov_2_MutSpec/main/Sars_Cov_2/new_data/data_obtained/MutChange_12spec_FF_normed_byone.csv\""
+    "path_ff  = \"https://raw.githubusercontent.com/VoronkaAlexandr/Sars_Cov_2_MutSpec/main/Sars_Cov_2/new_data/data_obtained/MutChange_12spec_FF_normed_byone.csv\""
    ]
   },
   {
