--- a/notebooks/6.tree_dipping.ipynb
+++ b/notebooks/6.tree_dipping.ipynb
@@ -6,6 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import sys\n",
     "from collections import namedtuple\n",
     "\n",
     "import pandas as pd\n",
@@ -14,7 +15,8 @@
     "import tqdm\n",
     "from queue import Queue\n",
     "\n",
-    "from src.utils import node_parent\n",
+    "sys.path.append('../scripts/')\n",
+    "from utils import node_parent\n",
     "\n",
     "\n",
     "def read_tree(path: str, frmt=1) -> PhyloTree:\n",
